# ChangeLog for dev-perl/IMAP-Admin
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IMAP-Admin/ChangeLog,v 1.12 2013/08/26 10:23:04 idella4 Exp $

*IMAP-Admin-1.6.7-r1 (26 Aug 2013)

  26 Aug 2013; Ian Delaney <idella4@gentoo.org> +IMAP-Admin-1.6.7-r1.ebuild:
  revbump -> EAPI 5, add IUSE examples

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  18 Feb 2012; Torsten Veller <tove@gentoo.org> -IMAP-Admin-1.6.4.ebuild:
  Cleanup

  03 Dec 2011; Markos Chandras <hwoarang@gentoo.org> IMAP-Admin-1.6.7.ebuild:
  Stable on amd64 wrt bug #391583

  01 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> IMAP-Admin-1.6.7.ebuild:
  x86 stable wrt bug #391583

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -IMAP-Admin-1.6.6.ebuild:
  Cleanup

*IMAP-Admin-1.6.7 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>
  +IMAP-Admin-1.6.7.ebuild:
  Version bump via perl-bump experimental tool.

*IMAP-Admin-1.6.6 (08 Sep 2008)

  08 Sep 2008; Torsten Veller <tove@gentoo.org> +IMAP-Admin-1.6.6.ebuild:
  Version bump

  05 May 2007; Andrej Kacian <ticho@gentoo.org> IMAP-Admin-1.6.4.ebuild:
  Stable on x86, bug #177074.

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  IMAP-Admin-1.6.4.ebuild:
  Ebuild maintenance

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  IMAP-Admin-1.6.4.ebuild:
  amd64 stable

*IMAP-Admin-1.6.4 (30 Sep 2006)

  30 Sep 2006; Christian Hartmann <ian@gentoo.org> +metadata.xml,
  +IMAP-Admin-1.6.4.ebuild:
  New package; dep for new websieve version