@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IMAP-Admin/IMAP-Admin-1.6.7-r1.ebuild,v 1.1 2013/08/26 10:23:04 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/IMAP-Admin/IMAP-Admin-1.6.7-r1.ebuild,v 1.2 2013/12/08 10:51:48 zlogene Exp $
 
 EAPI=5
 
@@ -11,7 +11,7 @@ DESCRIPTION="Perl module for basic IMAP server administration"
 
 SLOT="0"
 LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="examples"
 
 src_install() {
