@@ -1,15 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/IMAP-Admin/IMAP-Admin-1.6.7.ebuild,v 1.3 2011/12/03 11:52:03 hwoarang Exp $
-
-MODULE_AUTHOR=EESTABROO
-inherit perl-module
-
-DESCRIPTION="Perl module for basic IMAP server administration"
-
-SLOT="0"
-LICENSE="|| ( Artistic GPL-2 )"
-KEYWORDS="amd64 x86"
-IUSE=""
-
-DEPEND="dev-lang/perl"
